--- a/TC_001_TechKriti/index.html
+++ b/TC_001_TechKriti/index.html
@@ -12,6 +12,16 @@
     <title></title>
   </head>
   <body>
+    <div class="tophead">
+    <span class=""> <img src="header/l3.png" class="header l3">About</span>
+      <img src="header/l2.png" class="header l2">
+      <img src="header/l1.png" class="header l1">
+      <img src="header/centre.png" class="header headcentre">
+      <img src="header/r1.png" class="header r1">
+      <img src="header/r2.png" class="header r2">
+      <img src="header/r3.png" class="header r3">
+    </div>
+
 
 
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
