--- a/TC_001_TechKriti/index.html
+++ b/TC_001_TechKriti/index.html
@@ -13,13 +13,13 @@
   </head>
   <body>
     <div class="tophead">
-    <span class=""> <img src="header/l3.png" class="header l3">About</span>
-      <img src="header/l2.png" class="header l2">
-      <img src="header/l1.png" class="header l1">
-      <img src="header/centre.png" class="header headcentre">
-      <img src="header/r1.png" class="header r1">
-      <img src="header/r2.png" class="header r2">
-      <img src="header/r3.png" class="header r3">
+     <span><img src="header/l3.png" class="header l3"><div class="headertext tl3">About</div></span>
+      <img src="header/l2.png" class="header l2"><div class="headertext tl2">Hospitality</div></span>
+      <img src="header/l1.png" class="header l1"><div class="headertext tl1">Competitions</div></span>
+      <img src="header/centre.png" class="header headcentre"><div class="headertext"></div></span>
+      <img src="header/r1.png" class="header r1"><div class="headertext tr1">Workshops</div></span>
+      <img src="header/r2.png" class="header r2"><div class="headertext tr2">Sponsors</div></span>
+      <img src="header/r3.png" class="header r3"><div class="headertext tr3">Conatct Us</div></span>
     </div>
 
 
