--- a/TC_001_TechKriti/index.html
+++ b/TC_001_TechKriti/index.html
@@ -13,16 +13,41 @@
   </head>
   <body>
     <div class="tophead">
-     <span><img src="header/l3.png" class="header l3"><div class="headertext tl3">About</div></span>
-      <img src="header/l2.png" class="header l2"><div class="headertext tl2">Hospitality</div></span>
-      <img src="header/l1.png" class="header l1"><div class="headertext tl1">Competitions</div></span>
-      <img src="header/centre.png" class="header headcentre"><div class="headertext"></div></span>
-      <img src="header/r1.png" class="header r1"><div class="headertext tr1">Workshops</div></span>
-      <img src="header/r2.png" class="header r2"><div class="headertext tr2">Sponsors</div></span>
-      <img src="header/r3.png" class="header r3"><div class="headertext tr3">Conatct Us</div></span>
+     <span><img  src="header/l3.png" class="header l3"><div class="headertext tl3">About</div></span>
+      <img  src="header/l2.png" class="header l2"><div class="headertext tl2">Hospitality</div></span>
+      <img  src="header/l1.png" class="header l1"><div class="headertext tl1">Competitions</div></span>
+      <img  src="header/centre.png" class="header headcentre"><div class="headertext"></div></span>
+      <img  src="header/r1.png" class="header r1"><div class="headertext tr1">Workshops</div></span>
+      <img  src="header/r2.png" class="header r2"><div class="headertext tr2">Sponsors</div></span>
+      <img  src="header/r3.png" class="header r3"><div class="headertext tr3">Conatct Us</div></span>
     </div>
 
+    <div class="row">
+      <div class="column">
+        <div class=""><img  class="imgbody" src="tiles/competitions.jpg"><div class="">competitions</div></div>
+          <div class=""><img class="imgbody"  src="tiles/merchandise.jpg"><div class="">competitions</div></div>
 
+
+      </div>
+      <div class="column">
+        <div class=""><img  class="imgbody" src="tiles/technocruise.jpg"><div class="">competitions</div></div>
+        <div class=""><img  class="imgbody" src="tiles/hospitality.jpg"><div class="">competitions</div></div>
+        <div class=""><img  class="imgbody" src="tiles/exhibitions.jpg"><div class="">competitions</div></div>
+
+      </div>
+      <div class="column">
+        <div class=""><img  class="imgbody" src="tiles/workshops.jpg"><div class="">competitions</div></div>
+        <div class=""><img class="imgbody"  src="tiles/funt.jpg"><div class="">competitions</div></div>
+
+      </div>
+      <div class="column">
+
+        <div class=""><img class="imgbody"  src="tiles/shows.jpg"><div class="">competitions</div></div>
+        <div class=""><img  class="imgbody" src="tiles/talks.jpg"><div class="">competitions</div></div>
+        <div class=""><img class="imgbody"  src="tiles/tosc.jpg"><div class="">competitions</div></div>
+
+      </div>
+    </div>
 
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 
