--- a/TC_001_TechKriti/index.html
+++ b/TC_001_TechKriti/index.html
@@ -24,27 +24,27 @@
 
     <div class="row">
       <div class="column">
-        <div class=""><img  class="imgbody" src="tiles/competitions.jpg"><div class="">competitions</div></div>
-          <div class=""><img class="imgbody"  src="tiles/merchandise.jpg"><div class="">competitions</div></div>
+        <div class=""><img  class="imgbody" src="tiles/competitions.jpg"><div class="bodytext lg">Competitions</div></div>
+          <div class=""><img class="imgbody"  src="tiles/merchandise.jpg"><div class="bodytext ">Merchandise</div></div>
 
 
       </div>
       <div class="column">
-        <div class=""><img  class="imgbody" src="tiles/technocruise.jpg"><div class="">competitions</div></div>
-        <div class=""><img  class="imgbody" src="tiles/hospitality.jpg"><div class="">competitions</div></div>
-        <div class=""><img  class="imgbody" src="tiles/exhibitions.jpg"><div class="">competitions</div></div>
+        <div class="block"><img  class="imgbody" src="tiles/technocruise.jpg"><div class="bodytext ">Technocruise</div></div>
+        <div class="block"><img  class="imgbody" src="tiles/hospitality.jpg"><div class="bodytext ">Hospitality</div></div>
+        <div class=""><img  class="imgbody" src="tiles/exhibitions.jpg"><div class="bodytext ">Exhibitions</div></div>
 
       </div>
       <div class="column">
-        <div class=""><img  class="imgbody" src="tiles/workshops.jpg"><div class="">competitions</div></div>
-        <div class=""><img class="imgbody"  src="tiles/funt.jpg"><div class="">competitions</div></div>
+        <div class=""><img  class="imgbody" src="tiles/workshops.jpg"><div class="bodytext lg">Workshops</div></div>
+        <div class=""><img class="imgbody"  src="tiles/funt.jpg"><div class="bodytext ">Megaworld & Funt-T</div></div>
 
       </div>
       <div class="column">
 
-        <div class=""><img class="imgbody"  src="tiles/shows.jpg"><div class="">competitions</div></div>
-        <div class=""><img  class="imgbody" src="tiles/talks.jpg"><div class="">competitions</div></div>
-        <div class=""><img class="imgbody"  src="tiles/tosc.jpg"><div class="">competitions</div></div>
+        <div class=""><img class="imgbody"  src="tiles/shows.jpg"><div class="bodytext">Shows</div></div>
+        <div class=""><img  class="imgbody" src="tiles/talks.jpg"><div class="bodytext">Talks</div></div>
+        <div class=""><img class="imgbody"  src="tiles/tosc.jpg"><div class="bodytext">TOSC</div></div>
 
       </div>
     </div>
