--- a/TC_001_TechKriti/index.html
+++ b/TC_001_TechKriti/index.html
@@ -68,10 +68,10 @@
 
       </div>
     </div>
-    <img class="block social face" src="socialicons/facebook.png">
-    <img class="block social insta" src="socialicons/instagram.png">
-    <img class="social block twit "src="socialicons/twitter.png">
-    <img class=" social yout block" src="socialicons/youtube.png">
+    <img class=" social face" src="socialicons/facebook.png">
+    <img class=" social insta" src="socialicons/instagram.png">
+    <img class="social  twit "src="socialicons/twitter.png">
+    <img class=" social yout " src="socialicons/youtube.png">
 
 </body>
 </html>
