--- a/TC_001_TechKriti/index.html
+++ b/TC_001_TechKriti/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta http-equiv="refresh" content="31" >
     <link rel="stylesheet" href="./index.css">
-    <title></title>
+    <title>tech kriti</title>
   </head>
   <body>
     <div id="overlay" onclick="document.getElementById('overlay').style.display = 'none'">
