name field wokring

--- a/form validation/index.html
+++ b/form validation/index.html
@@ -10,7 +10,7 @@
   <body>
     <div class="">
   <h2>Signup for a free account</h2>
-  <form>
+  <form name='form' onsubmit="return validateForm()">
     <input type="text" name="name" placeholder="Name" />
     <input type="email" name="email" placeholder="Email" />
     <input type="number" name="phone" placeholder="phone number" />
@@ -22,4 +22,6 @@
   </form>
 </div>
   </body>
+  <script src="myscripts.js"></script>
+
 </html>
