--- a/form validation/index.html
+++ b/form validation/index.html
@@ -11,10 +11,10 @@
     <div class="">
   <h2>Signup for a free account</h2>
   <form name='form' onsubmit="return validateForm()">
-    <input type="text" name="name" placeholder="Name" />
+    <input type="text" name="name" placeholder="Name" onkeyup="name()""/>
     <input type="email" name="email" placeholder="Email" />
     <input type="number" name="phone" placeholder="phone number" />
-    <input type="number" name="age" placeholder="age" />
+    <input id="age" type="number" name="age" placeholder="age" onkeyup="age()" />
     <input type="password" name="password" placeholder="password" />
     <input type="password" name="password" placeholder="conform password" />
 
