--- a/form validation/index.html
+++ b/form validation/index.html
@@ -10,11 +10,11 @@
   <body>
     <div class="">
   <h2>Signup for a free account</h2>
-  <form name='form' onsubmit="return validateForm()">
-    <input type="text" name="name" placeholder="Name" onkeyup="name()""/>
+  <form name="form" onsubmit="return v()">
+    <input type="text" name="name" placeholder="Name" >
     <input type="email" name="email" placeholder="Email" />
     <input type="number" name="phone" placeholder="phone number" />
-    <input id="age" type="number" name="age" placeholder="age" onkeyup="age()" />
+    <input id="age" type="number" name="age" placeholder="age"  />
     <input type="password" name="password" placeholder="password" />
     <input type="password" name="password" placeholder="conform password" />
 
@@ -22,6 +22,5 @@
   </form>
 </div>
   </body>
-  <script src="myscripts.js"></script>
-
+<script src="myscripts.js"></script>
 </html>
