--- a/form validation/index.html
+++ b/form validation/index.html
@@ -15,8 +15,8 @@
     <input type="email" name="email" placeholder="Email" />
     <input type="number" name="phone" placeholder="phone number" />
     <input id="age" type="number" name="age" placeholder="age"  />
-    <input type="password" name="password" placeholder="password" />
-    <input type="password" name="password" placeholder="conform password" />
+    <input id="pass1" type="password" name="password" placeholder="password" />
+    <input id="pass2" type="password" name="password" placeholder="conform password" />
 
     <input type="submit" value="Submit" />
   </form>
