--- a/form validation/index.html
+++ b/form validation/index.html
@@ -17,8 +17,8 @@
     <small class="vis" >not proper email</small>
     <input type="number" name="phone" placeholder="phone number" />
     <small class="vis" >only positive numbers allowed</small>
-    <input id="age" type="number" name="age" placeholder="age"  />
-    <small class="vis" >must be greater then 20</small>
+    <input id="" type="number" name="age" placeholder="age"  />
+    <small class="" id="age" >must be greater then 20</small>
     <input id="pass1" type="password" name="password" placeholder="password" />
     <small class="vis" >make it stronger</small>
     <input id="pass2" type="password" name="password" placeholder="conform password" />
