--- a/form validation/index.html
+++ b/form validation/index.html
@@ -21,7 +21,7 @@
     <small class="" id="age" >must be greater then 20</small>
     <input id="pass1" type="password" name="password" placeholder="password" />
     <small class="vis" >make it stronger</small>
-    <input id="pass2" type="password" name="password" placeholder="conform password" />
+    <input id="pass2" type="password" name="pass" placeholder="conform password" />
     <small class="vis" >passwords dont match</small>
 
     <input type="submit" value="Submit" />
