--- a/form validation/index.html
+++ b/form validation/index.html
@@ -11,8 +11,8 @@
     <div class="">
   <h2>Signup for a free account</h2>
   <form name="form" onsubmit="return v()">
-    <input type="text" name="name" placeholder="Name" >
-    <small class="vis">numbers not allowed</small>
+    <input id="name" type="text" name="name" placeholder="Name" >
+    <small id="names" class="vis">numbers not allowed</small>
     <input type="email" name="email" placeholder="Email" />
     <small class="vis" >not proper email</small>
     <input type="number" name="phone" placeholder="phone number" />
