--- a/form validation/index.html
+++ b/form validation/index.html
@@ -9,23 +9,22 @@
   </head>
   <body>
     <div class="">
-  <h2>Signup for a free account</h2>
+  <h2>Form Validation By Js  - SiD</h2>
   <form name="form" onsubmit="return v()">
-    <input id="name" type="text" name="name" placeholder="Name" >
+    <input id="name" type="text" name="name" placeholder="Name" required>
     <small id="names" class="">numbers not allowed</small>
-    <input id="email" type="email" name="email" placeholder="Email" />
+    <input id="email" type="email" name="email" placeholder="Email" required>
     <small id="emails" class="" >not proper email</small>
-    <input id="phone" type="number" name="phone" placeholder="phone number" />
+    <input id="phone" type="number" name="phone" placeholder="phone number" required>
     <small id="phones" class="" >only positive numbers allowed</small>
-    <input id="age" type="number" name="age" placeholder="age"  />
+    <input id="age" type="number" name="age" placeholder="age"  required>
     <small id="ages" class=""  >must be greater then 20</small>
-    <input id="pass1" type="password" name="password" placeholder="password" />
+    <input id="pass1" type="password" name="password" placeholder="password" required>
     <small id="low"  >atleast 1 lowwer</small>
     <small id="cap" >atleast 1 upper</small>
     <small id="num"class="vis" >atleast 1 nomber</small>
     <small id="len"class="vis" >min 8 characters</small>
-
-    <input id="pass2" type="password" name="pass" placeholder="conform password" />
+    <input id="pass2" type="password" name="pass" placeholder="conform password" required>
     <small id="match" class="vis" >passwords dont match</small>
     <input type="submit" value="Submit" />
   </form>
