--- a/formvalidation/index.html
+++ b/formvalidation/index.html
@@ -5,7 +5,7 @@
     <title>Form</title>
     <link rel="stylesheet" href="styles.css">
     <meta http-equiv="refresh" content="999">
-
+<meta name="viewport" content="initial-scale=1">
   </head>
   <body>
     <div class="">
