--- a/formvalidation/index.html
+++ b/formvalidation/index.html
@@ -16,7 +16,7 @@
     <input id="email" type="email" name="email" placeholder="Email" required>
     <small id="emails" class="" > proper email is required </small>
     <input id="phone" type="number" name="phone" placeholder="phone number" required>
-    <small id="phones" class="" >only positive numbers allowed</small>
+    <small id="phones" class="" >we wont spam you</small>
     <input id="age" type="number" name="age" placeholder="age"  required>
     <small id="ages" class=""  >must be greater then 20</small>
     <input id="pass1" type="password" name="password" placeholder="password" required>
