--- a/formvalidation/index.html
+++ b/formvalidation/index.html
@@ -20,9 +20,9 @@
     <input id="age" type="number" name="age" placeholder="age"  required>
     <small id="ages" class=""  >must be greater then 20</small>
     <input id="pass1" type="password" name="password" placeholder="password" required>
-    <small id="low"  >atleast 1 lowwer</small>
-    <small id="cap" >atleast 1 upper</small>
-    <small id="num"class="vis" >atleast 1 nomber</small>
+    <small id="low"  >atleast 1 lowwer,</small>
+    <small id="cap" >atleast 1 upper,</small>
+    <small id="num"class="vis" >atleast 1 nomber,</small>
     <small id="len"class="vis" >min 8 characters</small>
     <input id="pass2" type="password" name="pass" placeholder="confirm password" required>
     <small id="match" class="vis" >passwords dont match</small>
