--- a/team memberwsview/sample 1/index.html
+++ b/team memberwsview/sample 1/index.html
@@ -21,7 +21,8 @@
 		<main>
 			<div class="content">
 				<header class="codrops-header">
-					<h1 class="codrops-header__title">team members view </h1>
+					<h1 class="codrops-header__title">team members view <br> sorry for my terrible editing and selection -SiD</h1>
+
 				</header>
 			</div>
 			<div class="content">
@@ -39,9 +40,9 @@
 					<a class="grid__item" href="#preview-2">
 						<div class="box">
 							<div class="box__shadow"></div>
-							<img class="box__img" src="img/2.jpg" alt="Some image"/>
-							<h3 class="box__title box__title--straight box__title--bottom"><span class="box__title-inner" data-hover="WebDev">WebDev</span></h3>
-							<h4 class="box__text box__text--bottom"><span class="box__text-inner box__text-inner--rotated1">name here</span></h4>
+							<img class="box__img" src="img/2.png" alt="Some image"/>
+							<h3 class="box__title  box__title--bottom"><span class="box__title-inner" data-hover="WebDev">WebDev</span></h3>
+							<h4 class="box__text box__text--bottom"><span class="box__text-inner box__text-inner--rotated1">Siddharth Shah</span></h4>
 							<div class="box__deco box__deco--top">&#10115;</div>
 						</div>
 					</a>
@@ -49,8 +50,8 @@
 						<div class="box">
 							<div class="box__shadow"></div>
 							<img class="box__img" src="img/3.jpg" alt="Some image"/>
-							<h3 class="box__title"><span class="box__title-inner" data-hover="Spons">Spons</span></h3>
-							<h4 class="box__text box__text--topcloser"><span class="box__text-inner">fullname here</span></h4>
+							<h3 class="box__title"><span class="box__title-inner" data-hover="WebDev">WebDev</span></h3>
+							<h4 class="box__text box__text--topcloser"><span class="box__text-inner">Akash Gayakwad</span></h4>
 							<div class="box__deco">&#10032;</div>
 						</div>
 					</a>
@@ -59,24 +60,24 @@
 						<div class="box">
 							<div class="box__shadow"></div>
 							<img class="box__img" src="img/5.jpg" alt="Some image"/>
-							<h3 class="box__title"><span class="box__title-inner" data-hover="P&R">P&R</span></h3>
-							<h4 class="box__text box__text--bottom box__text--right"><span class="box__text-inner box__text-inner--rotated3">myfull name</span></h4>
+							<h3 class="box__title"><span class="box__title-inner" data-hover="WebDev">WebDev</span></h3>
+							<h4 class="box__text box__text--bottom box__text--right"><span class="box__text-inner box__text-inner--rotated3">Mihir Singh</span></h4>
 						</div>
 					</a>
 					<a class="grid__item" href="#preview-5">
 						<div class="box">
 							<div class="box__shadow"></div>
-							<img class="box__img" src="img/6.jpg" alt="Some image"/>
-							<h3 class="box__title"><span class="box__title-inner" data-hover="Lim">Lim</span></h3>
-							<h4 class="box__text box__text--bottomcloser"><span class="box__text-inner">Breed</span></h4>
+							<img class="box__img" src="img/6.png" alt="Some image"/>
+							<h3 class="box__title"><span class="box__title-inner" data-hover="Ninja">Ninja</span></h3>
+							<h4 class="box__text box__text--bottomcloser"><span class="box__text-inner">Adarsh Shrivastav</span></h4>
 						</div>
 					</a>
 					<a class="grid__item" href="#preview-6">
 						<div class="box">
 							<div class="box__shadow"></div>
-							<img class="box__img" src="img/7.jpg" alt="Some image"/>
-							<h3 class="box__title"><span class="box__title-inner" data-hover="Hard">Hard</span></h3>
-							<h4 class="box__text"><span class="box__text-inner">Fast</span></h4>
+							<img class="box__img" src="img/7.png" alt="Some image"/>
+							<h3 class="box__title"><span class="box__title-inner" data-hover="Domain">Domain</span></h3>
+							<h4 class="box__text"><span class="box__text-inner">Nagendra Jha</span></h4>
 							<p class="box__content">"Love stronger, stranger! Love stronger."</p>
 						</div>
 					</a>
@@ -92,8 +93,8 @@
 						<div class="box">
 							<div class="box__shadow"></div>
 							<img class="box__img" src="img/4.jpg" alt="Some image"/>
-							<h3 class="box__title"><span class="box__title-inner" data-hover="Jack">Jack</span></h3>
-							<h4 class="box__text box__text--bottom"><span class="box__text-inner">Bust</span></h4>
+							<h3 class="box__title"><span class="box__title-inner" data-hover="WebDev">WebDev</span></h3>
+							<h4 class="box__text box__text--bottom"><span class="box__text-inner">Ramgopal Varma</span></h4>
 							<div class="box__deco">&#10108;</div>
 						</div>
 					</a>
@@ -140,7 +141,7 @@
 				<div class="overlay__item" id="preview-2">
 					<div class="box">
 						<div class="box__shadow"></div>
-						<img class="box__img box__img--original" src="img/original/2.jpg" alt="Some image"/>
+						<img class="box__img box__img--original" src="img/original/2.png" alt="Some image"/>
 						<h3 class="box__title box__title--straight box__title--bottom"><span class="box__title-inner">Gun</span></h3>
 						<h4 class="box__text box__text--bottom"><span class="box__text-inner box__text-inner--rotated1">Rain</span></h4>
 						<div class="box__deco box__deco--top">&#10115;</div>
@@ -196,7 +197,7 @@
 				<div class="overlay__item" id="preview-8">
 					<div class="box">
 						<div class="box__shadow"></div>
-						<img class="box__img box__img--original" src="img/original/9.jpg" alt="Some image"/>
+						<img class="box__img box__img--original" src="img/original/4.jpg" alt="Some image"/>
 						<h3 class="box__title"><span class="box__title-inner">Jack</span></h3>
 						<h4 class="box__text box__text--bottom"><span class="box__text-inner">Bust</span></h4>
 						<div class="box__deco">&#10108;</div>
