alot better with bg

--- a/wall.js/demo/index.html
+++ b/wall.js/demo/index.html
@@ -28,7 +28,7 @@
 <body>
   <div id="large-header" class="large-header">
   <canvas id="demo-canvas"></canvas>
-    <h1 class="main-title">Imagine <span class="thin">Improve Implement</span></h1>
+    <h1 class="main-title">I<span class="thin">magine</span> I<span class="thin">mprove</span> I<span class="thin">mplement</span></h1>
 </div>
   <ul class="nav" data-wall-section-nav>
     <li class="nav-link">home</li>
@@ -42,11 +42,9 @@
   <div id="wall" class="wall main">
     <section class="section section-1">
       <div class="wrapper">
-        <h1>AAvartan</h1>
+        <h1>AAvartan18</h1>
         <div class="sub-header">
-          <h5>one page scrolling effect</h5>
         </div>
-        <h5 class="step">>> Get Started</h5>
 
       </div>
     </section>
@@ -69,25 +67,18 @@
       </div>
     </section>
     <section class="section section-3">
-      <div class="slide"  data-wall-slide>
-        <div class="wrapper">
-          <h1>gallery </h1>
-          <h5 class="step">>> add <span class="hl">data-wall-slide</span> attribute to your HTMLElement</h5>
+      <div class="wrapper">
+        <h1>gallery </h1>
+        <h5 class="step">>> current section will be added <span class="hl">current</span> class</h5>
+        <p>Open your develop tool to check it!</p>
 
-          <p>try to click arrow to toggle slide</p>
-        </div>
-      </div>
-      <div class="slide"  data-wall-slide>
-        <div class="wrapper">
-          <h1>more images</h1>
-          <h5 class="step">>> add <span class="hl">data-wall-slide-arrow</span> attribute to your arrows</h5>
+        <h5 class="step">>> animating section will be added <span class="hl">animating</span> class</h5>
+        <p>Open your develop tool to check it!</p>
 
-          <p>Your should create and style the arrow yourself, wall.js helps arraw show above the slides</p>
-        </div>
-      </div>
-      <div data-wall-slide-arrow class="prev-slide"></div>
-      <div data-wall-slide-arrow class="next-slide"></div>
-    </section>
+        <h5 class="step">>> You can control animation like this:</h5>
+
+        <p>Bring it into full play!</p>
+      </div>  </section>
     <section class="section section-4" data-wall-animate-duration=3>
       <div class="wrapper">
         <h1>team technocracy</h1>
