bugs and readme

--- a/wall.js/demo/index.html
+++ b/wall.js/demo/index.html
@@ -51,9 +51,9 @@
     <section class="section section-2">
       <div class="wrapper">
         <h1>evolution</h1>
-        <div class="sub-header">
+        <!-- <div class="sub-header">
           <h5>Do you see the nav at top and dots at right?</h5>
-        </div>
+        </div> -->
         <h5 class="step">>> add <span class="hl">data-wall-section-nav</span> attribute to your own nav element</h5>
         <p>Note: wall.js will not create them directly, what wall.js does is to toggle the active class</p>
 
