--- a/wall.js/demo/index.html
+++ b/wall.js/demo/index.html
@@ -36,7 +36,7 @@
     <h1 class="main-title">I<span class="thin">magine</span> I<span class="thin">mprove</span> I<span class="thin">mplement</span></h1>
 </div>
 <div>
-  <ul id="navy" class="nav" data-wall-section-nav>
+  <ul id="navy" class="nav notnow" data-wall-section-nav>
     <li onclick="menu()" class="nav-link">home</li>
     <li onclick="menu()"class="nav-link">evolution</li>
     <li onclick="menu()" class="nav-link">gallery</li>
