--- a/wall.js/demo/index.html
+++ b/wall.js/demo/index.html
@@ -26,7 +26,7 @@
 </head>
 
 <body>
-<div id="croxx" class="dog" onclick="mymenu()">
+<div id="croxx" class="dog" onclick="menu()">
   <div class="bar1"></div>
   <div class="bar2"></div>
   <div class="bar3"></div>
