--- a/wall.js/demo/index.html
+++ b/wall.js/demo/index.html
@@ -85,7 +85,7 @@
 
         <p>Bring it into full play!</p>
       </div>  </section>
-    <section class="section section-4" data-wall-animate-duration=3>
+    <section class="section section-4" >
       <div class="wrapper">
         <h1>team technocracy</h1>
         <h5 class="step">>> change all sections' animation duration:</h5>
@@ -124,8 +124,8 @@
       </div>
     </section>
   </div>
-  <div id="prev" class="btn btn-secondary"><</div>
-  <div id="next" class="btn btn-primary">></div>
+  <!-- <div id="prev" class="btn btn-secondary"><</div>
+  <div id="next" class="btn btn-primary">></div> -->
   <ul class="dot" data-wall-section-nav>
     <li></li>
     <li></li>
