--- a/wall.js/demo/index.html
+++ b/wall.js/demo/index.html
@@ -126,7 +126,8 @@
   </div>
   <!-- <div id="prev" class="btn btn-secondary"><</div>
   <div id="next" class="btn btn-primary">></div> -->
-  <ul class="dot" data-wall-section-nav>
+  <ul onclick="" class="dot" data-wall-section-nav>
+
     <li></li>
     <li></li>
     <li></li>
