--- a/randomgallery/index.html
+++ b/randomgallery/index.html
@@ -415,65 +415,7 @@
 						<path d="M174.9,227.6l2.5,3.9l-1.8,1.1c-4.1,2.6-8.8,5.6-12,9.1l-3.4-3.1c3.6-3.9,8.6-7.1,13-9.9L174.9,227.6z" />
 						<path d="M156,235.1l2.4,4l1.6-1.2c3.7-2.9,8-6.2,12.1-7.9l-1.5-4.5c-4.7,1.9-9.1,5.4-13.1,8.5L156,235.1z" />
 						<path d="M158.5,255.8l-8.1,0.9c-0.3-2.4-1.7-4.4-3.3-6.8c-1.1-1.5-2.1-3.1-3-4.8l7.3-3.7c0.7,1.3,1.5,2.6,2.4,3.8C155.8,248.1,158,251.3,158.5,255.8z" />
-						<path d="M155.7,258.7c-1.5-4.2<div id="ri-grid" class="ri-grid ri-grid-size-3">
-					<img class="ri-loading-image" src="images/loading.gif"/>
-					<ul>
-						<li><a href="#"><img src="images/medium/1.jpg"/></a></li>
-						<li><a href="#"><img src="images/medium/2.jpg"/></a></li>
-						<li><a href="#"><img src="images/medium/3.jpg"/></a></li>
-						<li><a href="#"><img src="images/medium/4.jpg"/></a></li>
-						<li><a href="#"><img src="images/medium/5.jpg"/></a></li>
-						<li><a href="#"><img src="images/medium/6.jpg"/></a></li>
-						<li><a href="#"><img src="images/medium/7.jpg"/></a></li>
-						<li><a href="#"><img src="images/medium/8.jpg"/></a></li>
-						<li><a href="#"><img src="images/medium/9.jpg"/></a></li>
-						<li><a href="#"><img src="images/medium/10.jpg"/></a></li>
-						<li><a href="#"><img src="images/medium/11.jpg"/></a></li>
-						<li><a href="#"><img src="images/medium/12.jpg"/></a></li>
-						<li><a href="#"><img src="images/medium/13.jpg"/></a></li>
-						<li><a href="#"><img src="images/medium/14.jpg"/></a></li>
-						<li><a href="#"><img src="images/medium/15.jpg"/></a></li>
-						<li><a href="#"><img src="images/medium/16.jpg"/></a></li>
-						<li><a href="#"><img src="images/medium/17.jpg"/></a></li>
-						<li><a href="#"><img src="images/medium/18.jpg"/></a></li>
-						<li><a href="#"><img src="images/medium/19.jpg"/></a></li>
-						<li><a href="#"><img src="images/medium/20.jpg"/></a></li>
-						<li><a href="#"><img src="images/medium/21.jpg"/></a></li>
-						<li><a href="#"><img src="images/medium/22.jpg"/></a></li>
-						<li><a href="#"><img src="images/medium/23.jpg"/></a></li>
-						<li><a href="#"><img src="images/medium/24.jpg"/></a></li>
-						<li><a href="#"><img src="images/medium/25.jpg"/></a></li>
-						<li><a href="#"><img src="images/medium/26.jpg"/></a></li>
-						<li><a href="#"><img src="images/medium/27.jpg"/></a></li>
-						<li><a href="#"><img src="images/medium/28.jpg"/></a></li>
-						<li><a href="#"><img src="images/medium/29.jpg"/></a></li>
-						<li><a href="#"><img src="images/medium/30.jpg"/></a></li>
-						<li><a href="#"><img src="images/medium/31.jpg"/></a></li>
-						<li><a href="#"><img src="images/medium/32.jpg"/></a></li>
-						<li><a href="#"><img src="images/medium/33.jpg"/></a></li>
-						<li><a href="#"><img src="images/medium/34.jpg"/></a></li>
-						<li><a href="#"><img src="images/medium/35.jpg"/></a></li>
-						<li><a href="#"><img src="images/medium/36.jpg"/></a></li>
-						<li><a href="#"><img src="images/medium/37.jpg"/></a></li>
-						<li><a href="#"><img src="images/medium/38.jpg"/></a></li>
-						<li><a href="#"><img src="images/medium/39.jpg"/></a></li>
-						<li><a href="#"><img src="images/medium/40.jpg"/></a></li>
-						<li><a href="#"><img src="images/medium/41.jpg"/></a></li>
-						<li><a href="#"><img src="images/medium/42.jpg"/></a></li>
-						<li><a href="#"><img src="images/medium/43.jpg"/></a></li>
-						<li><a href="#"><img src="images/medium/44.jpg"/></a></li>
-						<li><a href="#"><img src="images/medium/45.jpg"/></a></li>
-						<li><a href="#"><img src="images/medium/46.jpg"/></a></li>
-						<li><a href="#"><img src="images/medium/47.jpg"/></a></li>
-						<li><a href="#"><img src="images/medium/48.jpg"/></a></li>
-						<li><a href="#"><img src="images/medium/49.jpg"/></a></li>
-						<li><a href="#"><img src="images/medium/50.jpg"/></a></li>
-						<li><a href="#"><img src="images/medium/51.jpg"/></a></li>
-						<li><a href="#"><img src="images/medium/52.jpg"/></a></li>
-						<li><a href="#"><img src="images/medium/53.jpg"/></a></li>
-						<li><a href="#"><img src="images/medium/54.jpg"/></a></li>
-					</ul>
-				</div>-0.2-8.8,3.7-13.2l4.3,3.7c-1.7,2-3.6,4.9-2.6,7.6L155.7,258.7z" />
+						<path d="M155.7,258.7c-1.5-4.2-0.2-8.8,3.7-13.2l4.3,3.7c-1.7,2-3.6,4.9-2.6,7.6L155.7,258.7z" />
 						<path d="M129.5,258.8c4.5,7.2,12.2,11.9,20.7,12.6l-3.7-6.1c-5.1-1.5-9.5-4.8-12.4-9.3L129.5,258.8z" />
 						<path d="M398,238.9c-8.5-3.5-17.2-6.4-26-8.8c-8.8-2.5-17.8-4.9-26.8-6.6c-0.6-0.1-0.9,0.8-0.3,1c8.7,1.7,17.3,4,25.9,6.4c9.1,2.4,18,5.4,26.6,8.9C398,240,398.6,239.1,398,238.9z" />
 						<path d="M345.5,220.6c-11.6-3.7-23.5-6.1-35.2-9.2c-11.9-3-23.7-6.7-35.2-11.1c-0.6-0.2-0.9,0.7-0.3,1c11.5,4.3,23.2,8,35.2,11c11.7,3,23.7,5.5,35.2,9.2c0.3,0,0.5-0.2,0.5-0.5C345.7,220.9,345.7,220.7,345.5,220.6L345.5,220.6z" />
