--- a/randomgallery/index.html
+++ b/randomgallery/index.html
@@ -65,12 +65,12 @@
 <!-- Collect the nav links, forms, and other content for toggling -->
 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 	<ul class="nav navbar-nav navbar-right  main-nav">
-		<li><a class="MR-0 ML-0" href="#aboutus">About Us</a></li>
-		<li><a class="MR-0 ML-0" href="#initiatives">Our Initiatives</a></li>
-		<li><a class="MR-0 ML-0" href="#gallery">Gallery</a></li>
-		<li><a class="MR-0 ML-0" href="#vigyaan">vigyaan</a></li>
-    <li><a class="MR-0 ML-0" href="#sponsors">Sponsors</a></li>
-    <li><a class="MR-0 ML-0" href="#team">Team</a></li>
+		<li><a href="#aboutus">About Us</a></li>
+		<li><a  href="#initiatives">Our Initiatives</a></li>
+		<li><a  href="#gallery">Gallery</a></li>
+		<li><a  href="#vigyaan">vigyaan</a></li>
+    <li><a href="#sponsors">Sponsors</a></li>
+    <li><a  href="#team">Team</a></li>
 
 		<li><a href="#" data-toggle="modal" data-target="#modal1" class="btn btn-blue">sign up</a></li>
 	</ul>
