--- a/secAvartan18/index.html
+++ b/secAvartan18/index.html
@@ -23,6 +23,14 @@
 		<link rel="stylesheet" type="text/css" href="css/base.css" />
 		<link rel="stylesheet" type="text/css" href="css/demo2.css" />
 
+    <!-- custom changes by sid-->
+    <link rel="stylesheet" type="text/css" href="css/customchanges.css">
+
+    <!-- <link rel="stylesheet" type="text/css" href="css/cnormalize.css" /> -->
+    <!-- <link rel="stylesheet" type="text/css" href="css/demo.css" /> -->
+    <!-- <link rel="stylesheet" type="text/css" href="css/icons.css" /> -->
+    <link rel="stylesheet" type="text/css" href="css/component.css" />
+    <!-- <script src="js/modernizr.custom.js"></script> -->
 <!-- Normalize -->
 <link rel="stylesheet" type="text/css" href="css/normalize.css">
 <!-- Bootstrap -->
@@ -58,12 +66,12 @@
 <!-- Collect the nav links, forms, and other content for toggling -->
 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 	<ul class="nav navbar-nav navbar-right  main-nav">
-		<li><a class="MR-0 ML-0" href="#aboutus">About Us</a></li>
-		<li><a class="MR-0 ML-0" href="#initiatives">Our Initiatives</a></li>
-		<li><a class="MR-0 ML-0" href="#gallery">Gallery</a></li>
-		<li><a class="MR-0 ML-0" href="#vigyaan">vigyaan</a></li>
-    <li><a class="MR-0 ML-0" href="#sponsors">Sponsors</a></li>
-    <li><a class="MR-0 ML-0" href="#team">Team</a></li>
+		<li><a href="#aboutus">About Us</a></li>
+		<li><a href="#initiatives">Our Initiatives</a></li>
+		<li><a href="#gallery">Gallery</a></li>
+		<li><a href="#vigyaan">vigyaan</a></li>
+    <li><a href="#sponsors">Sponsors</a></li>
+    <li><a href="#team">Team</a></li>
 
 		<li><a href="#" data-toggle="modal" data-target="#modal1" class="btn btn-blue">sign up</a></li>
 	</ul>
@@ -488,13 +496,23 @@
 				</div>
 			</div>
 		</main>
-    <section id="aboutus" class="section section-padded">
+</section>
+    <section id="aboutus" class="">
+      <!-- <section class="col-3 ss-style-slit"> -->
     <div class="container">
     <div class="row text-center title">
-    	<h2>About Us</h2>
+    	<h2 class="margin-top">About Us</h2>
     	<h4 class="light muted">Achieve the best results with our wide variety of training options!</h4>
+
     </div>
-    <div class="row services">
+    <!-- <div class="column"> -->
+      <!-- <span class="icon icon-location"></span> -->
+    <!-- </div> -->
+    <!-- <div class="column text">
+      <h2>Objectively innovate empowered manufactured products</h2>
+      <p>Galaxies a still more glorious dawn awaits shores of the cosmic ocean bits of moving fluff the only home we've ever known finite but unbounded colonies astonishment laws of physics a very small stage in a vast cosmic arena brain is the seed of intelligence realm of the galaxies Apollonius of Perga rogue intelligent beings courage of our questions made in the interiors</p>
+    </div> -->
+    <!-- <div class="row services">
     	<div class="col-md-4">
     		<div class="service">
     			<div class="icon-holder">
@@ -522,17 +540,20 @@
     			<p class="description">A elementum ligula lacus ac quam ultrices a scelerisque praesent vel suspendisse scelerisque a aenean hac montes.</p>
     		</div>
     	</div>
-    </div>
+    </div> -->
     </div>
     <div class="cut cut-bottom"></div>
     </section>
-    <section id="initiatives" class="section section-padded">
+</section>
+    <!-- <section id="initiatives" class="section section-padded"> -->
+      <section id="initiatives" class="section ">
+      <section class="col-3 ss-style-doublediagonal">
 <div class="container">
 <div class="row text-center title">
-	<h2>Initiatives</h2>
+	<h2 class="margin-top">Initiatives</h2>
 	<h4 class="light muted">Achieve the best results with our wide variety of training options!</h4>
 </div>
-<div class="row services">
+<!-- <div class="row services">
 	<div class="col-md-4">
 		<div class="service">
 			<div class="icon-holder">
@@ -559,18 +580,19 @@
 			<h4 class="heading">Power Training</h4>
 			<p class="description">A elementum ligula lacus ac quam ultrices a scelerisque praesent vel suspendisse scelerisque a aenean hac montes.</p>
 		</div>
-	</div>
+	</div> -->
 </div>
 </div>
 <div class="cut cut-bottom"></div>
 </section>
 <section id="gallery" class="section gray-bg">
+
 <div class="container">
 <div class="row title text-center">
 	<h2 class="margin-top">gallery</h2>
 	<h4 class="light muted">We're a dream team!</h4>
 </div>
-<div class="row">
+<!-- <div class="row">
 	<div class="col-md-4">
 		<div class="team text-center">
 			<div class="cover" style="background:url('img/team/team-cover1.jpg'); background-size:cover;">
@@ -619,16 +641,21 @@
 			<a href="#" data-toggle="modal" data-target="#modal1" class="btn btn-blue-fill ripple">Sign Up Now</a>
 		</div>
 	</div>
-</div>
+</div> -->
 </div>
 </section>
 <section id="vigyaan" class="section">
+  <section class="col-3 ss-style-doublediagonal">
+
+  <!-- <svg id="bigTriangleColor" xmlns="http://www.w3.org/2000/svg" version="1.1" width="100%" height="100" viewBox="0 0 100 102" preserveAspectRatio="none">
+  <path d="M0 0 L50 100 L100 0 Z" />
+</svg> -->
 <div class="container">
 <div class="row title text-center">
 	<h2 class="margin-top ">Vigyaan</h2>
 	<h4 class="light white">Choose your favorite pricing plan and sign up today!</h4>
 </div>
-<div class="row no-margin">
+<!-- <div class="row no-margin">
 	<div class="col-md-7 no-padding col-md-offset-5 pricings text-center">
 		<div class="pricing">
 			<div class="box-main active" data-img="img/pricing1.jpg">
@@ -665,10 +692,11 @@
 			</div>
 		</div>
 	</div>
-</div>
+</div> -->
 </div>
 </section>
-<section class="section section-padded blue-bg">
+<!-- review section -->
+<!-- <section class="section section-padded blue-bg">
 <div class="container">
 <div class="row">
 	<div class="col-md-8 col-md-offset-2">
@@ -692,14 +720,14 @@
 	</div>
 </div>
 </div>
-</section>
+</section> -->
 <section id="sponsors" class="section gray-bg">
 <div class="container">
 <div class="row title text-center">
 	<h2 class="margin-top">sponsors</h2>
 	<h4 class="light muted">We're a dream team!</h4>
 </div>
-<div class="row">
+<!-- <div class="row">
 	<div class="col-md-4">
 		<div class="team text-center">
 			<div class="cover" style="background:url('img/team/team-cover1.jpg'); background-size:cover;">
@@ -748,15 +776,21 @@
 			<a href="#" data-toggle="modal" data-target="#modal1" class="btn btn-blue-fill ripple">Sign Up Now</a>
 		</div>
 	</div>
+</div> -->
 </div>
-</div>
-</section><section id="team" class="section gray-bg">
+</section>
+<section id="team" class="section gray-bg">
+  <section class="col-3 ss-style-doublediagonal">
+
+  <!-- <svg id="curveDownColor" xmlns="http://www.w3.org/2000/svg" version="1.1" width="100%" height="100" viewBox="0 0 100 100" preserveAspectRatio="none">
+    <path d="M0 0 C 50 100 80 100 100 0 Z"/>
+  </svg> -->
 <div class="container">
 <div class="row title text-center">
 	<h2 class="margin-top">team</h2>
 	<h4 class="light muted">We're a dream team!</h4>
 </div>
-<div class="row">
+<!-- <div class="row">
 	<div class="col-md-4">
 		<div class="team text-center">
 			<div class="cover" style="background:url('img/team/team-cover1.jpg'); background-size:cover;">
@@ -805,7 +839,7 @@
 			<a href="#" data-toggle="modal" data-target="#modal1" class="btn btn-blue-fill ripple">Sign Up Now</a>
 		</div>
 	</div>
-</div>
+</div> -->
 </div>
 </section>
 <div class="modal fade" id="modal1" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
