--- a/secAvartan18/index.html
+++ b/secAvartan18/index.html
@@ -45,6 +45,8 @@
 <link rel="stylesheet" type="text/css" href="fonts/eleganticons/et-icons.css">
 <!-- Main style -->
 <link rel="stylesheet" type="text/css" href="css/cardio.css">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+
 </head>
 
 <body>
@@ -546,8 +548,8 @@
     </section>
 </section>
     <!-- <section id="initiatives" class="section section-padded"> -->
-      <section id="initiatives" class="section ">
-      <section class="col-3 ss-style-doublediagonal">
+      <section id="initiatives" class="section gray-bg">
+      <!-- <section class="col-3 ss-style-doublediagonal"> -->
 <div class="container">
 <div class="row text-center title">
 	<h2 class="margin-top">Initiatives</h2>
@@ -584,8 +586,10 @@
 </div>
 </div>
 <div class="cut cut-bottom"></div>
+<!-- </section> -->
+
 </section>
-<section id="gallery" class="section gray-bg">
+<section id="gallery" class="section">
 
 <div class="container">
 <div class="row title text-center">
@@ -644,8 +648,8 @@
 </div> -->
 </div>
 </section>
-<section id="vigyaan" class="section">
-  <section class="col-3 ss-style-doublediagonal">
+<section id="vigyaan" class="section  gray-bg">
+  <!-- <section class="col-3 ss-style-doublediagonal"> -->
 
   <!-- <svg id="bigTriangleColor" xmlns="http://www.w3.org/2000/svg" version="1.1" width="100%" height="100" viewBox="0 0 100 102" preserveAspectRatio="none">
   <path d="M0 0 L50 100 L100 0 Z" />
@@ -694,6 +698,7 @@
 	</div>
 </div> -->
 </div>
+<!-- </section> -->
 </section>
 <!-- review section -->
 <!-- <section class="section section-padded blue-bg">
@@ -721,7 +726,7 @@
 </div>
 </div>
 </section> -->
-<section id="sponsors" class="section gray-bg">
+<section id="sponsors" class="section ">
 <div class="container">
 <div class="row title text-center">
 	<h2 class="margin-top">sponsors</h2>
@@ -780,7 +785,7 @@
 </div>
 </section>
 <section id="team" class="section gray-bg">
-  <section class="col-3 ss-style-doublediagonal">
+  <!-- <section class="col-3 ss-style-doublediagonal"> -->
 
   <!-- <svg id="curveDownColor" xmlns="http://www.w3.org/2000/svg" version="1.1" width="100%" height="100" viewBox="0 0 100 100" preserveAspectRatio="none">
     <path d="M0 0 C 50 100 80 100 100 0 Z"/>
@@ -841,6 +846,8 @@
 	</div>
 </div> -->
 </div>
+<!-- </section> -->
+
 </section>
 <div class="modal fade" id="modal1" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
 <div class="modal-dialog">
