--- a/secAvartan18/index.html
+++ b/secAvartan18/index.html
@@ -881,29 +881,10 @@
 </div>
 <footer>
 <div class="container">
-<div class="row">
-	<div class="col-sm-6 text-center-mobile">
-		<h3 class="white">Reserve a Free Trial Class!</h3>
-		<h5 class="light regular light-white">Shape your body and improve your health.</h5>
-		<a href="#" class="btn btn-blue ripple trial-button">Start Free Trial</a>
-	</div>
-	<div class="col-sm-6 text-center-mobile">
-		<h3 class="white">Opening Hours <span class="open-blink"></span></h3>
-		<div class="row opening-hours">
-			<div class="col-sm-6 text-center-mobile">
-				<h5 class="light-white light">Mon - Fri</h5>
-				<h3 class="regular white">9:00 - 22:00</h3>
-			</div>
-			<div class="col-sm-6 text-center-mobile">
-				<h5 class="light-white light">Sat - Sun</h5>
-				<h3 class="regular white">10:00 - 18:00</h3>
-			</div>
-		</div>
-	</div>
-</div>
+
 <div class="row bottom-footer text-center-mobile">
 	<div class="col-sm-8">
-		<p>&copy; 2015 All Rights Reserved. Powered by <a href="http://www.phir.co/">PHIr</a> exclusively for <a href="http://tympanus.net/codrops/">Codrops</a></p>
+		<p>&copy; organised by team technocracy </a> site made by <a href="http://tympanus.net/codrops/">web team</a></p>
 	</div>
 	<div class="col-sm-4 text-right text-center-mobile">
 		<ul class="social-footer">
